--- a/templates/question/_form.html.twig
+++ b/templates/question/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{{ form_start(form,{attr:{novalidate:'novalidate'}}) }}
     {{ form_row(form.enonce) }}
     {{ form_row(form.domaine) }}
     {{ form_row(form.reponsecorrecte) }}
