--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -3,8 +3,12 @@
 {% block title %}Question{% endblock %}
 
 {% block body %}
-    <h1>Question</h1>
-
+<div style="display: flex;align-items: center;justify-content: center;padding:150px">
+   <div>
+       <h5 class="card-title">Question</h5>
+        <div style="display: flex;align-items: right;justify-content: right;">
+        </div>
+        <table class="table">
     <table class="table">
         <tbody>
             <tr>
@@ -26,9 +30,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('afficherQuestions') }}">back to list</a>
+    <a class="btn btn-outline-primary" href="{{ path('afficherQuestions') }}">back to list</a>
 
-    <a href="{{ path('modifierQuestion', {'idquestion': question.idquestion}) }}">edit</a>
+    <a class="btn btn-outline-secondary" href="{{ path('modifierQuestion', {'idquestion': question.idquestion}) }}">edit</a>
 
     {{ include('question/_delete_form.html.twig') }}
 {% endblock %}
