--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -1,38 +1,44 @@
 {% extends 'baseAdmin.html.twig' %}
 
-{% block title %}Question{% endblock %}
+{% block title %}Question
+{% endblock %}
 
 {% block body %}
-<div style="display: flex;align-items: center;justify-content: center;padding:150px">
-   <div>
-       <h5 class="card-title">Question</h5>
-        <div style="display: flex;align-items: right;justify-content: right;">
-        </div>
-        <table class="table">
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Idquestion</th>
-                <td>{{ question.idquestion }}</td>
-            </tr>
-            <tr>
-                <th>Enonce</th>
-                <td>{{ question.enonce }}</td>
-            </tr>
-            <tr>
-                <th>Domaine</th>
-                <td>{{ question.domaine }}</td>
-            </tr>
-            <tr>
-                <th>Reponsecorrecte</th>
-                <td>{{ question.reponsecorrecte }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<div style="display: flex;align-items: center;justify-content: center;padding:150px">
+		<div>
+			<h5 class="card-title">Question</h5>
+			<div style="display: flex;align-items: right;justify-content: right;"></div>
+			<table class="table">
+				<table class="table">
+					<tbody>
+						<tr>
+							<th>Idquestion</th>
+							<td>{{ question.idquestion }}</td>
+						</tr>
+						<tr>
+							<th>Enonce</th>
+							<td>{{ question.enonce }}</td>
+						</tr>
+						<tr>
+							<th>Domaine</th>
+							<td>{{ question.domaine }}</td>
+						</tr>
+						<tr>
+							<th>Reponsecorrecte</th>
+							<td>{{ question.reponsecorrecte }}</td>
+						</tr>
+						<tr>
+							<th>Propositions</th>
+							{% for prop in props %}
+                                <td>{{ prop.proposition }}</td>
+                            {% endfor %}
+						</tr>
+					</tbody>
+				</table>
 
-    <a class="btn btn-outline-primary" href="{{ path('afficherQuestions') }}">back to list</a>
+				<a class="btn btn-outline-primary" href="{{ path('afficherQuestions') }}">back to list</a>
 
-    <a class="btn btn-outline-secondary" href="{{ path('modifierQuestion', {'idquestion': question.idquestion}) }}">edit</a>
+				<a class="btn btn-outline-secondary" href="{{ path('modifierQuestion', {'idquestion': question.idquestion}) }}">edit</a>
 
-    {{ include('question/_delete_form.html.twig') }}
-{% endblock %}
+				{{ include('question/_delete_form.html.twig') }}
+			{% endblock %}
