--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -36,7 +36,7 @@
 					</tbody>
 				</table>
 
-				<a class="btn btn-outline-primary" href="{{ path('afficherQuestions') }}">back to list</a>
+				<a class="btn btn-outline-primary" href="{{ path('afficherQuestions') }}">Retour à la liste</a>
 
 				<a class="btn btn-outline-secondary" href="{{ path('modifierQuestion', {'idquestion': question.idquestion}) }}">edit</a>
 
