--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,13 @@
         <link rel="stylesheet" media="screen" href="{{ asset('http://fonts.googleapis.com/css?family=Open+Sans:300,400,700') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/font-awesome.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/passerQuiz.css') }}">
+        <link rel="stylesheet" href={{ asset("assets/css/stylesheet.css")}}>
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+        
+
+        
+
 
         <!-- Custom styles for our template -->
         <link rel="stylesheet" href="{{ asset('assets/css/bootstrap-theme.css') }}" media="screen" >
@@ -28,6 +35,8 @@
         <script src="{{ asset('assets/js/jQuery.headroom.min.js') }}"></script>
         <script src="{{ asset('assets/js/template.js') }}"></script>
         <script src="https://kit.fontawesome.com/cc2c1873c0.js" crossorigin="anonymous"></script>
+        <script src={{ asset("https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")}}></script>
+        <script src={{ asset("assets/js/script.js")}}></script>
     {% endblock %}
 </head>
 <body>
