controle saisie des entites & template admin

--- a/templates/admin/listCompetances.html.twig
+++ b/templates/admin/listCompetances.html.twig
@@ -21,7 +21,12 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Competances</h5>
-
+                            <div class="search-bar">
+                                <form class="search-form d-flex align-items-center" method="POST" action="#">
+                                    <input type="text" name="query" placeholder="Search" title="Enter search keyword">
+                                    <button type="submit" title="Search"><i class="bi bi-search"></i></button>
+                                </form>
+                            </div>
                             <!-- Table with stripped rows -->
                             <table class="table datatable">
                                 <thead>
@@ -48,7 +53,10 @@
                                 </tbody>
                             </table>
                             <!-- End Table with stripped rows -->
+                            <div class="navigation" >
+                                {{ knp_pagination_render(competances,'pagination.html.twig') }}
 
+                            </div>
                         </div>
                     </div>
 
