--- a/templates/admin/listExperiences.html.twig
+++ b/templates/admin/listExperiences.html.twig
@@ -58,7 +58,10 @@
                                 </tbody>
                             </table>
                             <!-- End Table with stripped rows -->
+                            <div class="navigation" >
+                                {{ knp_pagination_render(experiences,'pagination.html.twig') }}
 
+                            </div>
                         </div>
                     </div>
 
