--- a/templates/admin/listFacultes.html.twig
+++ b/templates/admin/listFacultes.html.twig
@@ -51,7 +51,9 @@
                                 </tbody>
                             </table>
                             <!-- End Table with stripped rows -->
-
+                            <div class="navigation" >
+                                {{ knp_pagination_render(facultes,'pagination.html.twig') }}
+                            </div>
                         </div>
                     </div>
 
