--- a/templates/competance/addCompetance.html.twig
+++ b/templates/competance/addCompetance.html.twig
@@ -1,1 +1,12 @@
-{{ form(f, {attr: {novalidate: 'novalidate'}}) }}
+
+{% extends 'base.html.twig' %}
+
+{% block title %}Add Competance!{% endblock %}
+
+{% block body %}
+    <div class="formulaire-design">
+
+    {{ form(f, {attr: {novalidate: 'novalidate'}}) }}
+    </div>
+
+{% endblock %}
