--- a/emails/templates/reset_password_request.html.twig
+++ b/emails/templates/reset_password_request.html.twig
@@ -7,7 +7,7 @@
 </head>
 <body>
 {% apply inline_css(source('@email_css/email.css')) %}
-
+    <h1>Username : {{ username }}</h1>
     <h1>Vous avez fait une demande de réinitialisation de mot de passe</h1>
     <p>Pour finaliser votre demande vous pouvez cliquer sur le lien ci-dessous</p>
     <a href="{{ url('reset-password', { token: token }) }}">Changer mon mot de passe</a>
