--- a/templates/admin/listSocietes.html.twig
+++ b/templates/admin/listSocietes.html.twig
@@ -42,8 +42,13 @@
 
                                     </tr>
                                 {% endfor %}
+
                                 </tbody>
                             </table>
+
+
+                            {{ knp_pagination_render(societes,'pagination.html.twig') }}
+
                             <!-- End Table with stripped rows -->
 
                         </div>
