--- a/templates/admin/listUsers.html.twig
+++ b/templates/admin/listUsers.html.twig
@@ -23,10 +23,13 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Users</h5>
+                            {{ form_start(form) }}
+                            {{ form_widget(form) }}
+                            <button type="submit" title="Search"><i class="bi bi-search"></i></button>
+                            {{ form_end(form) }}
                             <div class="search-bar">
                                 <form class="search-form d-flex align-items-center" method="POST" action="#">
                                     <input type="text" name="query" placeholder="Search" title="Enter search keyword">
-                                    <button type="submit" title="Search"><i class="bi bi-search"></i></button>
                                 </form>
                             </div>
                             <!-- Table with stripped rows -->
@@ -55,14 +58,20 @@
                                         <td>{{ u.cin}}</td>
                                         <td>{{ u.email}}</td>
                                         <td>{{ u.role}}</td>
-                                        <td><a href="{{ path('app_user_edit', {'id': u.id}) }}" class="btn btn-outline-primary">Block</a></td>
-
+                                        {% if u.etatBlock == false %}
+                                        <td><a href="{{ path('blockUser',{'idUser':u.id}) }}" class="btn btn-outline-primary">Block</a></td>
+                                        {% elseif u.etatBlock==true %}
+                                            <td><a  href="{{ path('blockUser',{'idUser':u.id}) }}" class="btn btn-outline-danger">Deblock</a></td>
+                                        {% endif%}
                                     </tr>
                                 {% endfor %}
                                 </tbody>
                             </table>
                             <!-- End Table with stripped rows -->
+                            <div class="navigation" >
 
+                                {{ knp_pagination_render(users,'pagination.html.twig') }}
+                            </div>
                         </div>
                     </div>
 
