--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/styleRole.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/rateStar.css') }}">
+        <link rel="stylesheet" href="{{ asset('bundles/mercuryseriesflashy/css/flashy.css') }}">
     {% endblock %}
 
     {% block javascripts %}
@@ -30,6 +31,11 @@
         <script src="{{ asset('assets/js/template.js') }}"></script>
         <script src="https://kit.fontawesome.com/cc2c1873c0.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
+        <script src="//code.jquery.com/jquery.js"></script>
+        <!-- Load Flashy default JavaScript -->
+        <script src="{{ asset('bundles/mercuryseriesflashy/js/flashy.js') }}"></script>
+        <!-- Include Flashy default partial -->
+
         <script>
             $(document).ready(function() {
                 // you may need to change this code if you are not using Bootstrap Datepicker
@@ -76,8 +82,49 @@
     </div>
     <!-- /.navbar -->
 {% endblock %}
-{% block body %}
+    {% block body %}
 
+    {% endblock %}
+{% block contact %}
+    <div style="width: 80%;margin: auto">
+        <header class="page-header">
+            <h1 class="page-title">Contact us</h1>
+        </header>
+
+        <p>
+            We’d love to hear from you. Interested in working together? Fill out the form below with some info about your project and I will get back to you as soon as I can. Please allow a couple days for me to respond.
+        </p>
+        <br>
+        <form>
+            <div class="row">
+                <div class="col-sm-4">
+                    <input class="form-control" type="text" placeholder="Name">
+                </div>
+                <div class="col-sm-4">
+                    <input class="form-control" type="text" placeholder="Email">
+                </div>
+                <div class="col-sm-4">
+                    <input class="form-control" type="text" placeholder="Phone">
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-sm-12">
+                    <textarea placeholder="Type your message here..." class="form-control" rows="9"></textarea>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-sm-6">
+                    <label class="checkbox"><input type="checkbox"> Sign up for newsletter</label>
+                </div>
+                <div class="col-sm-6 text-right">
+                    <input class="btn btn-action" type="submit" value="Send message">
+                </div>
+            </div>
+        </form>
+
+    </div>
 {% endblock %}
 
 
@@ -150,8 +197,13 @@
                 </div> <!-- /row of widgets -->
             </div>
         </div>
+        <div style="margin-top: 300px">
+            {{ include('@MercurySeriesFlashy/flashy.html.twig') }}
+
+        </div>
 
     </footer>
 {% endblock %}
+
 </body>
 </html>
