--- a/templates/quiz/new.html.twig
+++ b/templates/quiz/new.html.twig
@@ -13,7 +13,7 @@
 <div class="card" style="display: flex;align-items: center;justify-content: center;padding:150px">
             <div class="card-body">
                 {{ include('quiz/_form.html.twig') }}
-                <a href="{{ path('app_quiz_index') }}">back to list</a>
+                <a class="btn btn-outline-danger" href="{{ path('acceuil') }}">Retour à l'acceuil</a>
             </div>
           </div>
 
