--- a/templates/quiz/index.html.twig
+++ b/templates/quiz/index.html.twig
@@ -1,10 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Quiz index{% endblock %}
+{% block title %}Quiz list{% endblock %}
 
 {% block body %}
-    <h1>Quiz index</h1>
 
+
+<div style="display: flex;align-items: center;justify-content: center;padding:150px">
+   <div>
+       <h1 class="card-title">Liste des Questions</h1>
+        <div style="display: flex;align-items: right;justify-content: right;">       
+		<a class="btn btn-success" href="{{ path('app_quiz_new') }}">Ajouter Question </a></div>
     <table class="table">
         <thead>
             <tr>
@@ -21,8 +26,8 @@
                 <td>{{ quiz.domaine }}</td>
                 <td>{{ quiz.datecreation ? quiz.datecreation|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_quiz_show', {'idquiz': quiz.idquiz}) }}">show</a>
-                    <a href="{{ path('app_quiz_edit', {'idquiz': quiz.idquiz}) }}">edit</a>
+                    <a class="btn btn-primary" href="{{ path('app_quiz_show', {'idquiz': quiz.idquiz}) }}">Afficher</a>
+                    <a class="btn btn-secondary" href="{{ path('app_quiz_edit', {'idquiz': quiz.idquiz}) }}">Modifer</a>
                 </td>
             </tr>
         {% else %}
@@ -32,6 +37,12 @@
         {% endfor %}
         </tbody>
     </table>
+         </div>
 
-    <a href="{{ path('app_quiz_new') }}">Create new</a>
+
+    </div>
+    			 <div class="d-flex justify-content-center">
+		 {% do quizzes.setPageRange(2) %}
+		 {{ knp_pagination_render (quizzes ,'pagination.html.twig') }}
+		 </div>
 {% endblock %}
