--- a/templates/score/show.html.twig
+++ b/templates/score/show.html.twig
@@ -3,24 +3,24 @@
 {% block title %}Score{% endblock %}
 
 {% block body %}
-    <h1>Score</h1>
+<div style="display: flex;align-items: center;justify-content: center;padding:150px">
+    {% for s in score %}
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Idscore</th>
-                <td>{{ score.idscore }}</td>
-            </tr>
-            <tr>
-                <th>Score</th>
-                <td>{{ score.score }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="col-md-3 col-sm-6 highlight" style="box-shadow:5px 2px 2px" >
+					<div class="h-caption"></i><h4>{{ domaine }} Quiz</h4></div>
+					<div class="h-body text-center">
+                        Note : {{ s.score }}
+                        <br>
+                        Date : {{ date | date("d/m/Y") }}
+					</div>
+				</div>
 
-    <a href="{{ path('app_score_index') }}">back to list</a>
 
-    <a href="{{ path('app_score_edit', {'idscore': score.idscore}) }}">edit</a>
+   
+        
+    {% endfor %}
 
-    {{ include('score/_delete_form.html.twig') }}
+</div>
+ <a href="{{ path('app_score_index') }}">back to list</a>
+
 {% endblock %}
