--- a/templates/stage/_form.html.twig
+++ b/templates/stage/_form.html.twig
@@ -8,7 +8,7 @@
 							
 							{{ form_start(f1,{attr:{novalidate:'novalidate'}}) }}
 								<div class="top-margin" >
-									<label>Durèe<span class="text-danger">*</span></label>
+									<label>Durèe En Mois<span class="text-danger">*</span></label>
 									{{ form_widget(f1.duree,{attr:{'class':'form-control'}}) }} 
                                     {{ form_errors(f1.duree,{attr:{'class':'text-danger'}}) }}
 								</div>
