--- a/templates/stage/show.html.twig
+++ b/templates/stage/show.html.twig
@@ -14,7 +14,7 @@
                 <td>{{ stage.idstage }}</td>
             </tr>
             <tr>
-                <th>Duree</th>
+                <th>Duree En Mois</th>
                 <td>{{ stage.duree }}</td>
             </tr>
             <tr>
