--- a/templates/formation/editformation.html.twig
+++ b/templates/formation/editformation.html.twig
@@ -8,7 +8,7 @@
         <div  style="display: flex;align-items: center;justify-content: center;margin-top: 150px; padding: 10px;">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Ajouter une formation</h5>
+                    <h5 class="card-title">Modifier une formation</h5>
 
                     <!-- General Form Elements -->
                     {{ form_start(ff,{attr:{novalidate:'novalidate'}}) }}
