--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -3,18 +3,26 @@
 {% block title %}Reservation index{% endblock %}
 
 {% block body %}
-    <h1>Reservation index</h1>
-    <br>
-    <br>
-    <br>
-    <br>
+
+
+<style>
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+</style>
+<br>
+<br>
+<br>
+<br>
+<div class="example-wrapper">
     <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Nom</th>
-            <th>Datereservation</th>
-        </tr>
-        </thead>
+
+
+    </thead>
+
+        <th>nom</th>
+        <th>datereservation</th>
+
+        </thread>
         <tbody>
         {% for r in reservation %}
             <tr>
