--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -8,7 +8,10 @@
         {% block stylesheets %}
             <link href="assets/img/favicon.png" rel="icon">
             <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+            <!-- Flushy Message Nice Rendrering -->
+            <link rel="stylesheet" href="{{ asset('bundles/mercuryseriesflashy/css/flashy.css') }}">
+            <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+            <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700' rel='stylesheet'>
             <!-- Google Fonts -->
             <link href="{{ asset('https://fonts.gstatic.com') }}" rel="preconnect">
             <link href="{{ asset('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i')}}" rel="stylesheet">
@@ -483,8 +486,15 @@
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
         </footer><!-- End Footer -->
-    {% endblock %}
+                         <!-- Flashy depends on jQuery -->
+        <script src="//code.jquery.com/jquery.js"></script>
+        <!-- Load Flashy default JavaScript -->
+        <script src="{{ asset('bundles/mercuryseriesflashy/js/flashy.js') }}"></script>
 
+        <!-- Template Javascript -->
+        <script src="{{ asset('assets2/js/main.js') }}"></script>
+    {% endblock %}
+    {{ include('@MercurySeriesFlashy/flashy.html.twig') }}
 
     </body>
 </html>
