--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,120 +1,195 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello ProfileController!{% endblock %}
-
+{% block stylesheets %}
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{{ asset('assets3/css/bootstrap.min.css?ver=1.1.0') }}" rel="stylesheet">
+    <link href="{{ asset('assets3/css/main.css?ver=1.1.0') }}" rel="stylesheet">
+    <noscript>
+        <style type="text/css">
+            [data-aos] {
+                opacity: 1 !important;
+                transform: translate(0) scale(1) !important;
+            }
+        </style>
+    </noscript>
+{% endblock %}
 {% block body %}
-    <div style="margin-top: 120px;">
-        <div class="page-profil">
-            <div class="left-profil">
-                <div class="contact-info">
-                    <img alt="profile" src="{{ asset('profiles/' ~ app.user.pdp) }}" width="200px" height="200px"/>
-                    <div style="margin-top: 20px;margin-left: 110px">
-                      <a href="{{ path('edit_photo_profil',{'idUser':app.user.id}) }}">  <p>Edit Photo<i class="fa-solid fa-pen-to-square" style="font-size: 20px;color: green"></i></p></a>
+        <div class="profile-page">
+            <div class="wrapper">
+                <div class="page-header page-header-small" filter-color="green">
+                    <div class="page-header-image" data-parallax="true" style="background-image: {{asset('assets3/images/cc-bg-1.jpg')}}"></div>
+                    <div class="container">
+                        <div class="content-center">
+                            <div class="cc-profile-image"><a href="#"><img src="{{ asset('assets3/images/anthony.jpg') }}" alt="Image"/></a></div>
+                            <div class="h2 title">Anthony Barnett</div>
+                            <p class="category text-white">Web Developer, Graphic Designer,  Photographer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                        </div>
                     </div>
-                    <hr>
-                    <p>Username : {{ app.user.username }}</p>
-                    <p>Email : {{ app.user.email }}</p>
-                    <p>Telephone : {{ app.user.tel }}</p>
-                    {% if app.user.idfaculte %}
-                    <p>Faculte : {{ app.user.idfaculte.nomfaculte }}</p>
-                    {% else %}
-                    <p>Faculte : <a href="{{ path('edit_faculte',{'idUser':app.user.id}) }}" >Ajouter Faculte<i class="fa-solid fa-pen-to-square" style="font-size: 20px;color: green"></i></a></p>
-                    {% endif %}
-                    <a href="{{ path('edit_profile',{'idUser': app.user.id}) }}">Edit Profile</a>
-                </div>
-                <hr>
-                <div class="main-competences" style="text-align: center">
-                    <h3>Main Competance</h3>
-                   {%  for c in competenes %}
-                    <p>{{ c.nomCompetance }}</p>
-                    {% endfor %}
-
+                    <div class="section">
+                        <div class="container">
+                            <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="right-profil">
-                <div class="upper-profil">
-                    <p>{{ app.user.nom }}{{ app.user.prenom }}</p>
-                    <p>{{ app.user.profil }}</p>
-                    <p>Note : 3</p>
-                    <p>{{ app.user.note }}</p>
-                </div>
-                <div class="lower-profil">
-                    <div class="tab ">
-                        <button class="tablinks active" onclick="openCity(event, 'Competance')">Competance</button>
-                        <button class="tablinks" onclick="openCity(event, 'Experience')">Experience</button>
-                    </div>
-
-                    <!-- Tab content -->
-                    <div id="Competance" class="tabcontent" style="display: block">
-                        <a href="{{ path('add_competance') }}">Ajouter Nouvelle Competance</a>
-                        {% for c in competenes %}
-                        <div class="comp" style="width:200px;padding:10px;border: 1px solid black;display: flex;align-items:center;justify-content: space-between">
-                            <div>
-                                <h4><b>{{ c.nomCompetance }}</b></h4>
-                                <h5>{{ c.niveau }}</h5>
-                            </div>
-                            <div style="display: flex;flex-direction: column;">
-                                  <a href="{{ path('edit_competance', {'idCompetance': c.idcompetance}) }}"><i class="fa-solid fa-pen-to-square" style="font-size: 30px;color: green"></i></a>
-                                  <a href="{{ path('supp_competance',{'idCompetance': c.idcompetance}) }}"><i class="fa-solid fa-xmark" style="font-size: 30px;color: red"></i></a>
+        </div>
+        <div class="section" id="about">
+            <div class="container">
+                <div class="card" data-aos="fade-up" data-aos-offset="10">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-12">
+                            <div class="card-body">
+                                <div class="h4 mt-0 title">About</div>
+                                <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.</p>
+                                <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
                             </div>
                         </div>
-                        {% endfor %}
-
-
-
-                    </div>
-                    <div id="Experience" class="tabcontent" >
-                         <a href="{{ path('add_experience') }}">Ajouter nouvelle experience</a>
-                        {% for e in experiences %}
-                        <div class="exp" style="padding:10px;border: 1px solid black;display: flex;justify-content: space-between;align-items:center">
-                            <div>
-                                <p> Duree : {{ e.dateDebut | date }} ---> {{ e.datefin | date}}</p>
-                                <h4>poste : {{ e.poste }}</h4>
-                                <h5>Societe : {{ e.societe }}</h5>
-
-                                <p> Competence Mise En Oeuvre : {{e.competanMiseEnOuvre}}</p>
-                            </div>
-
-                            <div style="display: flex;flex-direction: column;">
-
-                               <a href="{{ path('edit_experience', {'idExperience': e.idexperience}) }}"><i class="fa-solid fa-pen-to-square" style="font-size: 30px;color: green"></i></a>
-                                 <a href="{{ path('supp_experience',{'idExperience': e.idexperience}) }}"><i class="fa-solid fa-xmark" style="font-size: 30px;color: red"></i></a>
+                        <div class="col-lg-6 col-md-12">
+                            <div class="card-body">
+                                <div class="h4 mt-0 title">Basic Information</div>
+                                <div class="row">
+                                    <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
+                                    <div class="col-sm-8">24</div>
+                                </div>
+                                <div class="row mt-3">
+                                    <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
+                                    <div class="col-sm-8">anthony@company.com</div>
+                                </div>
+                                <div class="row mt-3">
+                                    <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
+                                    <div class="col-sm-8">+1718-111-0011</div>
+                                </div>
+                                <div class="row mt-3">
+                                    <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
+                                    <div class="col-sm-8">140, City Center, New York, U.S.A</div>
+                                </div>
+                                <div class="row mt-3">
+                                    <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
+                                    <div class="col-sm-8">English, German, French</div>
+                                </div>
                             </div>
                         </div>
-
-                        {% endfor %}
-
                     </div>
-
-
-
-
                 </div>
             </div>
-
+        </div>
+    <div class="section" id="skill">
+        <div class="container">
+            <div class="h4 text-center mb-4 title">Professional Skills</div>
+            <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="progress-container progress-primary"><span class="progress-badge">SASS</span>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="progress-container progress-primary"><span class="progress-badge">Photoshop</span>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <script>
-        function openCity(evt, cityName) {
-            // Declare all variables
-            var i, tabcontent, tablinks;
-
-            // Get all elements with class="tabcontent" and hide them
-            tabcontent = document.getElementsByClassName("tabcontent");
-            for (i = 0; i < tabcontent.length; i++) {
-                tabcontent[i].style.display = "none";
-            }
-
-            // Get all elements with class="tablinks" and remove the class "active"
-            tablinks = document.getElementsByClassName("tablinks");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-
-            // Show the current tab, and add an "active" class to the button that opened the tab
-            document.getElementById(cityName).style.display = "block";
-            evt.currentTarget.className += " active";
-        }
-    </script>
+    <div class="section" id="experience">
+        <div class="container cc-experience">
+            <div class="h4 text-center mb-4 title">Work Experience</div>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body cc-experience-header">
+                            <p>March 2016 - Present</p>
+                            <div class="h5">CreativeM</div>
+                        </div>
+                    </div>
+                    <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body">
+                            <div class="h5">Front End Developer</div>
+                            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body cc-experience-header">
+                            <p>April 2014 - March 2016</p>
+                            <div class="h5">WebNote</div>
+                        </div>
+                    </div>
+                    <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body">
+                            <div class="h5">Web Developer</div>
+                            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body cc-experience-header">
+                            <p>April 2013 - February 2014</p>
+                            <div class="h5">WEBM</div>
+                        </div>
+                    </div>
+                    <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body">
+                            <div class="h5">Intern</div>
+                            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="{{ asset('assets3/js/core/jquery.3.2.1.min.js?ver=1.1.0') }}"></script>
+    <script src="{{ asset('assets3/js/core/popper.min.js?ver=1.1.0') }}"></script>
+    <script src="{{ asset('assets3/js/core/bootstrap.min.js?ver=1.1.0') }}"></script>
+    <script src="{{ asset('assets3/js/now-ui-kit.js?ver=1.1.0') }}"></script>
+    <script src="{{ asset('assets3/js/aos.js?ver=1.1.0') }}"></script>
+    <script src="{{ asset('assets3/scripts/main.js?ver=1.1.0') }}"></script>
 {% endblock %}
 
