--- a/templates/security/inscription.html.twig
+++ b/templates/security/inscription.html.twig
@@ -3,7 +3,7 @@
 
 
 {% block body %}
-    <div style="margin-top: 100px">
+    <div style="margin-top: 20px;display: flex;justify-content: center;align-items: center">
         {{ form(form,{attr: {novalidate: 'novalidate'}}) }}
     </div>
 {% endblock %}
